extends ScrollContainer


func _on_Theracne_Gel_Boto_pressed():
	get_parent().move_child(self, 3)


func _on_Theracne_Sabonete_Boto_pressed():
	get_parent().move_child(self, 3)


func _on_Cetrilan_Boto_pressed():
	get_parent().move_child(self, 3)


func _on_Klavie_Boto_pressed():
	get_parent().move_child(self, 2)


func _on_Cetrilan_Sequencia_Pele_Seca_Boto_pressed():
	get_parent().move_child(self, 2)
